# pyorps

./: .coverage  .coveragerc  .readthedocs.yml  LICENSE  README.md  cobertura.xml  codecov.exe.SHA256SUM  codecov.exe.SHA256SUM.sig  coverage.xml  pyproject.toml  run_tests.py  setup.py  test_path.gpkg
.github/workflows/: build_and_publish_to_pypi.yml  code-quality.yml  coverage-badge.yml  docs.yml
case_studies/mv_oberrhein/: case_study_mv_oberrhein.py
docs/: Makefile  reuirements.txt
docs/source/: README.md  api_reference.rst  conf.py  index.rst  requirements.txt  reuirements.txt
examples/: Untitled.ipynb  advanced_example.ipynb  benchmarking_graph_apis.py  complex_path_finding_example.ipynb  complex_path_finding_example.py  create_rasterized_geodata.ipynb  minimal_example.ipynb  minimal_path_finding_example.ipynb  minimal_path_finding_example.py
examples/data/cost_assumptions/: cost_assumptions_template_HE_ALKIS.csv
examples/data/results/: example_multiple_paths.geojson  route_from_minimal_example.geojson
pyorps/: __init__.py
pyorps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyorps/core/: __init__.py  cost_assumptions.py  exceptions.py  path.py  types.py
pyorps/graph/: __init__.py  path_finder.py  raster_graph.py
pyorps/graph/api/: cugraph_api.py  dask_cugraph_api.py  graph_api.py  graph_library_api.py  igraph_api.py  networkit_api.py  networkx_api.py  rustworkx_api.py
pyorps/io/: __init__.py  geo_dataset.py  vector_loader.py
pyorps/raster/: __init__.py  handler.py  rasterizer.py
pyorps/utils/: neighborhood.py  plotting.py  traversal.py
pyorps/utils/__pycache__/: traversal.calculate_region_bounds-71.py311.1.nbc  traversal.calculate_region_bounds-71.py311.nbi  traversal.calculate_segment_length-260.py311.1.nbc  traversal.calculate_segment_length-260.py311.nbi  traversal.construct_edges-191.py311.1.nbc  traversal.construct_edges-191.py311.nbi  traversal.find_valid_nodes-136.py311.1.nbc  traversal.find_valid_nodes-136.py311.nbi  traversal.get_cost_factor_numba-56.py311.1.nbc  traversal.get_cost_factor_numba-56.py311.nbi  traversal.get_max_number_of_edges-174.py311.1.nbc  traversal.get_max_number_of_edges-174.py311.nbi  traversal.get_outgoing_edges-413.py311.1.nbc  traversal.get_outgoing_edges-413.py311.2.nbc  traversal.get_outgoing_edges-413.py311.nbi  traversal.intermediate_steps_numba-22.py311.1.nbc  traversal.intermediate_steps_numba-22.py311.nbi  traversal.is_valid_node-100.py311.1.nbc  traversal.is_valid_node-100.py311.nbi  traversal.ravel_index-65.py311.1.nbc  traversal.ravel_index-65.py311.nbi
tests/: run_tests.py
tests/test_core/: test_cost_assumptions.py  test_exceptions.py  test_path.py  test_types.py
tests/test_graph/: test_graph_api.py  test_graph_library_api.py  test_igraph_api.py  test_networkit_api.py  test_networkx_api.py  test_path_finder.py  test_rustworkx_api.py
tests/test_integration/: test_path_finder_integration.py  test_rasterizer_integration.py
tests/test_io/: test_geo_dataset.py  test_vector_loader.py
tests/test_raster/: test_handler.py  test_rasterizer.py
tests/test_utils/: test_neighborhood.py  test_plotting.py  test_traversal.py
