
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyorps"
version = "0.1.0"
description = "PYORPS (Python for Optimal Routes in Power Systems)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Martin Hofmann", email = "martin.hofmann-3@ei.thm.de"},
]
keywords = [
    "power line routing",
    "distribution grid",
    "power systems planning",
    "path finding",
    "rasterized GIS data"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "geopandas>=1.0.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "networkit>=11.1"
]

[tool.coverage.run]
source = ["pyorps"]
relative_files = true
omit = [
    # Add paths to files you want to exclude
    "tests/*",
    "docs/*",
    "case_studies/*",
    "examples/*",
    ".venv/*",
    ".github/*",
    "setup.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.uv]
python = "3.11"

[project.urls]
"Homepage" = "https://github.com/marhofmann/pyorps"
"Bug Tracker" = "https://github.com/marhofmann/pyorps/issues"

[project.optional-dependencies]
# Visualization dependencies
viz = [
    "matplotlib>=3.10.1",
]
# Interactive usage dependencies
interactive = [
    "notebook>=7.4.0",
    "fiona>=1.10.1",
    "openpyxl>=3.1.5",
]
# Web API dependencies
web = [
    "requests>=2.32.3",
]
# Graph processing dependencies
graph = [
    "rustworkx>=0.16.0",
    "igraph>=0.11.8",

]
# Development and testing dependencies
dev = [
    "coverage[toml]>=7.8.0",
    "pytest>=8.3.5",
]
# All optional dependencies
full = [
    "pyorps[viz,interactive,web,graph,dev]",
]

# Package discovery configuration
[tool.setuptools]
# If using flat structure (package at root level)
packages = ["pyorps"]

